<resources>
    <string name="app_name">EpicFit</string>

    <string name="perfil">Profile</string>
    <string name="registro" >Register</string>
    <string name="entrenador">Coach</string>
    <string name="workouts">Workouts</string>

    <!-- General Strings -->
    <string name="usuario">User</string>
    <string name="nombre">Name</string>
    <string name="apellidos">Last Name</string>
    <string name="email">Email</string>
    <string name="fecha_nacimiento">Date of Birth</string>
    <string name="pass">Password</string>
    <string name="registrarme">Register</string>
    <string name="cerrar_sesion">Log Out</string>
    <string name="si">Yes</string>
    <string name="no">No</string>

    <!-- Login Strings -->
    <string name="login_iniciar_sesion">LOG IN</string>
    <string name="login_mantener_sesion">Keep session active</string>
    <string name="login_cuenta">Do not have an account yet?</string>
    <string name="login_err_inicio">Failed to log in</string>
    <string name="login_err_ingrese">Please enter username and password</string>
    <string name="login_bienvenido">Welcome</string>

    <!-- Register Strings -->
    <string name="registro_volver">Back</string>
    <string name="registro_pass_1">Enter password</string>
    <string name="registro_pass_2">Repeat password</string>
    <string name="registro_tipo_usuario">User Type</string>
    <string name="registro_msg_exito">Successfully registered</string>
    <string name="registro_err">Error registering user</string>
    <string name="registro_err_apellido">Last name is empty or exceeds 50 characters</string>
    <string name="registro_err_correo">Incorrect email, please re-enter it</string>
    <string name="registro_err_nombre">Incorrect name, it is empty or exceeds 25 characters</string>
    <string name="registro_err_pass">Incorrect password, it must be between 8 and 20 characters, include at least one lowercase letter, one uppercase letter, one number, and one special character</string>
    <string name="registro_err_pass_no_coinciden">Passwords do not match, please try again</string>
    <string name="registro_err_usuario">Incorrect username, it must only contain lowercase letters</string>
    <string name="registro_err_duplicado">Username already exists</string>

    <!-- User Type (Registration) -->
    <string-array name="tipoUsuario">
        <item>Client</item>
        <item>Coach</item>
    </string-array>

    <!-- Workouts Strings -->
    <string name="nivel_pl">Level of</string>
    <string name="nivel">Level:</string>
    <string name="filtrar_niveles">Filter by levels:</string>
    <string name="todos_niveles">All levels</string>
    <string name="repeticiones">repetitions</string>
    <string name="descanso">rest between sets</string>
    <string name="completado">completed in</string>
    <string name="no_historicos">You have not completed any workouts</string>
    <string name="tiempo_previsto">Estimated time</string>
    <string name="descripcion_workout">Description: workout for</string>
    <string name="desconocido">unknown</string>
    <string name="err_historicos">Could not obtain historical records</string>

    <string name="workout_borrar_error">Error deleting workout</string>
    <string name="workout_borrar_exito">Workout successfully deleted</string>
    <string name="workout_pregunta_borrar">Are you sure you want to delete this workout?</string>
    <string name="workout_pregunta_modificar">Are you sure you want to modify this workout?</string>

    <!-- Coach Strings -->
    <string name="agregar_workout">Add workout</string>
    <string name="modificar_workout">Modify workout</string>
    <string name="eliminar_workout">Delete Workout</string>

    <string-array name="Idiomas">
        <item>Spanish</item>
        <item>English</item>
    </string-array>

    <string name="agregar">Add</string>
    <string name="modificar_workout_titulo">Modify Workout</string>
    <string name="nombre_hint">Workout Name</string>
    <string name="nivel_hint">Level (integer)</string>
    <string name="tiempo_hint">Time (in seconds)</string>
    <string name="video_hint">Video link (optional)</string>
    <string name="tipo_hint">Workout Type</string>
    <string name="guardar">Save</string>
    <string name="cancelar">Cancel</string>
    <string name="workout_actualizado">Workout updated successfully</string>
    <string name="error_actualizar_workout">Error updating the Workout</string>

    <string name="aceptar">OK</string>
    <string name="logo">logo</string>
    <string name="tipo">type</string>
    <string name="borrar">delete</string>
    <string name="play">play</string>
    <string name="tema">theme</string>
</resources>

