<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/logo_menu"
        android:title="@string/app_name"
        android:icon="@drawable/logo"
        app:tint="@color/logo_color"
        app:showAsAction="always" />
    <item
        android:id="@+id/switch_tema"
        android:title="@string/tema"
        app:actionLayout="@layout/switch_item"
        app:showAsAction="always" />
    <item
        android:id="@+id/item_workout"
        android:title="@string/workouts" />
    <item
        android:id="@+id/item_perfil"
        android:title="@string/perfil" />
    <item
        android:id="@+id/item_entrenador"
        android:title="@string/entrenador" />
    <item
        android:id="@+id/item_cerrar_sesion"
        android:title="@string/cerrar_sesion" />
</menu>